# RAGNexus

./: .comet.yaml  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .squawk.toml  Dockerfile  README.md  admin-prototype.html  composition.py  config.py  demo_retrieve.py  docker-compose.test.yml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
.superpowers/sdd/: progress.md  task-12-report.md  task-6-report.md  task-7-report.md  task-8-report.md
adapters/embedder/: openai_compat.py
adapters/http/: error_handlers.py
adapters/knowledge_base/: pg.py
adapters/parsers/: md_and_txt.py
adapters/vector_store/: pgvector.py  registry.py
admin/: E2E_TEST_REPORT.md  index.html  package-lock.json  package.json  tailwind.config.js  test_baseline.json  test_full.json  tsc_errors.txt  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
admin/src/: App.tsx  index.css
admin/src/lib/: axios.ts
admin/src/pages/: create-kb.test.tsx  create-kb.tsx  layout.tsx  upload-doc.test.tsx  upload-doc.tsx
admin/src/services/: api.ts
admin/src/types/: api.ts
admin/src/utils/: file-filter.test.ts  file-filter.ts  storage.test.ts  (+3 more)
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
application/: create_kb_use_case.py  retrieve_use_case.py  upload_doc_use_case.py
docs/: 3-pgvector-rag-cuddly-dream.md  4-llm-rerank-silent-judge.md  5-query-rewrite-silent-scribe.md
docs/sql/: schema.sql
domain/: chunking.py  errors.py  ports.py
scripts/: check_model_latency.py  retrieve_ab_test.py  show_rewrite_quality.py  squawk-precommit.ps1  verify-production.py  verify-production.sh
src/ragnexus/: __init__.py  composition.py  config.py
tests/: conftest.py
tests/e2e/: conftest.py  test_optimizations.py  test_smoke.py
tests/integration/: conftest.py  test_alembic_migration.py  test_composition.py  test_documents_table.py  test_pg_kb_repo.py  test_pg_vector_store.py  test_retrieve_full_chain.py  test_retrieve_log.py  test_upload_full_chain.py
tests/unit/: test_config.py  test_llm_openai_compat.py  test_llm_provider.py  test_llm_rerank.py  test_llm_rewrite.py  test_noop_rerank.py  test_noop_rewrite.py  test_parser_schema_compat.py  test_rewrite_port.py
(+150 files in other folders)
