[project]
name = "ragnexus"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "asyncpg>=0.29",
  "pgvector>=0.3",
  "nanoid>=2.0",
  "python-multipart>=0.0.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["ragnexus", "ragnexus.*"]
[tool.pytest.ini_options]
markers = [
    "integration: requires Docker with PostgreSQL + pgvector",
    "e2e: requires Docker with PostgreSQL + pgvector",
]
addopts = "-m 'not integration and not e2e'"
