[project]
name = "ragnexus"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "asyncpg>=0.29",
  "pgvector>=0.3",
  "nanoid>=2.0",
  "colorlog>=6.0",
  "alembic>=1.13",
  "python-multipart>=0.0.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pyright>=1.1.410",
  "ruff>=0.15.0",
  "pre-commit>=4.0",
  "psycopg2-binary>=2.9",
]

[tool.setuptools.packages.find]
where = ["src"]
[tool.pytest.ini_options]
markers = [
    "integration: requires Docker with PostgreSQL + pgvector",
    "e2e: requires Docker with PostgreSQL + pgvector",
]
asyncio_mode = "auto"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
exclude = ["**/__pycache__", ".venv", ".worktrees", ".pytest_cache", ".ruff_cache", ".agents"]
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line too long — handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["ragnexus"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "pytest-httpx>=0.23",
]

[tool.coverage.run]
source = ["src/ragnexus"]
omit = ["*/tests/*", "*/alembic/*"]
